yaml/challenge.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:  
  name: kubetest  
spec:  
  replicas: 1  
  selector: 
    matchLabels: 
      app: kubetest-pod  
  template:  
    metadata:  
      labels:  
        app: kubetest-pod  
    spec:
      containers:  
      - name: challenge
        image: kubetest:1.0
        imagePullPolicy: Never
        ports:  
        - containerPort: 4000
