yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubetest
  labels:
    app: kubetest-pod
spec:
  ports:
    - port: 4000
      name: web
  selector:
    app: kubetest-pod
#  type: ClusterIP
  type: NodePort
